# dynamic-catalogs

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  justfile
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
src/: globals.rs  main.rs  main.rs.bak
src/addon/: catalog.rs  manifest.rs  mod.rs
src/trakt/: api.rs  mod.rs
