[package]
name = "dynamic_catalogs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = [] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.93"
once_cell = "1.20.2"
scraper = "0.21.0"
base64 = "0.22.1"
